--- a/hardhat-tutorial/package.json
+++ b/hardhat-tutorial/package.json
@@ -13,6 +13,7 @@
     "hardhat": "^2.12.3"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.8.0",
     "dotenv": "^16.0.3"
   }
